added docker configuration for local run and development modes

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: rizla
+  datasource:
+    url: jdbc:postgresql://db:5432/rizladb
+    username: rizla_user
+    password: rizla_pass
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 jwt:
   secret: Whatever
   expiration: 3600
