--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - db
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/rizladb
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:9999/rizladb
       SPRING_DATASOURCE_USERNAME: rizla_user
       SPRING_DATASOURCE_PASSWORD: rizla_pass
 
@@ -17,7 +17,7 @@ services:
     ports:
       - "9999:5432"
     environment:
-      POSTGRES_DB: rizla_db
+      POSTGRES_DB: rizladb
       POSTGRES_USER: rizla_user
       POSTGRES_PASSWORD: rizla_pass
     volumes:
